client_src = [
    '../shared/crypto.cc',
    '../shared/geom.cc',
    '../shared/glemu.cc',
    '../shared/stream.cc',
    '../shared/tools.cc',
    '../shared/zip.cc',
    '../engine/aa.cc',
    '../engine/bih.cc',
    '../engine/blend.cc',
    '../engine/client.cc',
    '../engine/command.cc',
    '../engine/console.cc',
    '../engine/dynlight.cc',
    '../engine/grass.cc',
    '../engine/light.cc',
    '../engine/main.cc',
    '../engine/material.cc',
    '../engine/menus.cc',
    '../engine/movie.cc',
    '../engine/normal.cc',
    '../engine/octa.cc',
    '../engine/octaedit.cc',
    '../engine/octarender.cc',
    '../engine/physics.cc',
    '../engine/pvs.cc',
    '../engine/rendergl.cc',
    '../engine/renderlights.cc',
    '../engine/rendermodel.cc',
    '../engine/renderparticles.cc',
    '../engine/rendersky.cc',
    '../engine/rendertext.cc',
    '../engine/renderva.cc',
    '../engine/server.cc',
    '../engine/serverbrowser.cc',
    '../engine/shader.cc',
    '../engine/sound.cc',
    '../engine/stain.cc',
    '../engine/texture.cc',
    '../engine/ui.cc',
    '../engine/water.cc',
    '../engine/world.cc',
    '../engine/worldio.cc',
    '../game/ai.cc',
    '../game/client.cc',
    '../game/entities.cc',
    '../game/game.cc',
    '../game/render.cc',
    '../game/scoreboard.cc',
    '../game/server.cc',
    '../game/waypoint.cc',
    '../game/weapon.cc'
]

threads_dep = dependency('threads')
sdl2_dep = dependency('sdl2')
sdl2_image_dep = dependency('SDL2_image')
sdl2_mixer_dep = dependency('SDL2_mixer')
libenet_dep = dependency('libenet')
zlib_dep = dependency('zlib')
gl_dep = dependency('gl')
rt_dep = meson.get_compiler('cpp').find_library('rt')

executable('native_client',
    client_src,
    dependencies: [
        threads_dep, libenet_dep, sdl2_dep, sdl2_image_dep,
        sdl2_mixer_dep, zlib_dep, gl_dep, rt_dep
    ],
    include_directories: octacore_includes,
    install: true,
    install_dir: join_paths(meson.source_root(), 'bin_unix')
)
